Add new viz superclass for apps with computes and clean up initail compute schema, plugin templates, bringing up to date with new main branch APIs