@@ -3,32 +3,27 @@ package org.veupathdb.service.eda.ds.plugin.betadiv;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.lang.reflect.Array;
-import java.util.Arrays;
-import java.util.List;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.Scanner;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.gusdb.fgputil.IoUtil;
 import org.gusdb.fgputil.ListBuilder;
 import org.gusdb.fgputil.validation.ValidationException;
-import org.json.JSONObject;
-import org.rosuda.REngine.Rserve.RFileInputStream;
 import org.veupathdb.service.eda.common.client.spec.StreamSpec;
 import org.veupathdb.service.eda.ds.constraints.ConstraintSpec;
 import org.veupathdb.service.eda.ds.constraints.DataElementSet;
-import org.veupathdb.service.eda.ds.plugin.AbstractPlugin;
-import org.veupathdb.service.eda.generated.model.APIVariableDataShape;
-import org.veupathdb.service.eda.generated.model.APIVariableType;
+import org.veupathdb.service.eda.ds.metadata.AppsMetadata;
+import org.veupathdb.service.eda.ds.plugin.AbstractPluginWithCompute;
+import org.veupathdb.service.eda.ds.util.RServeClient;
+import org.veupathdb.service.eda.generated.model.BetaDivComputeConfig;
 import org.veupathdb.service.eda.generated.model.BetaDivScatterplotPostRequest;
 import org.veupathdb.service.eda.generated.model.BetaDivScatterplotSpec;
 import org.veupathdb.service.eda.generated.model.VariableSpec;
 
 import static org.veupathdb.service.eda.ds.util.RServeClient.useRConnectionWithRemoteFiles;
 
-public class BetaDivScatterplotPlugin extends AbstractPlugin<BetaDivScatterplotPostRequest, BetaDivScatterplotSpec> {
+public class BetaDivScatterplotPlugin extends AbstractPluginWithCompute<BetaDivScatterplotPostRequest, BetaDivScatterplotSpec, BetaDivComputeConfig> {
 
   private static final Logger LOG = LogManager.getLogger(BetaDivScatterplotPlugin.class);
   
@@ -44,7 +39,7 @@ public class BetaDivScatterplotPlugin extends AbstractPlugin<BetaDivScatterplotP
 
   @Override
   public List<String> getProjects() {
-    return Arrays.asList("MicrobiomeDB");
+    return List.of(AppsMetadata.MICROBIOME_PROJECT);
   }
   
   @Override
@@ -55,6 +50,11 @@ public class BetaDivScatterplotPlugin extends AbstractPlugin<BetaDivScatterplotP
   @Override
   protected Class<BetaDivScatterplotSpec> getVisualizationSpecClass() {
     return BetaDivScatterplotSpec.class;
+  }
+
+  @Override
+  protected Class<BetaDivComputeConfig> getComputeSpecClass() {
+    return BetaDivComputeConfig.class;
   }
 
   @Override
@@ -100,7 +100,7 @@ public class BetaDivScatterplotPlugin extends AbstractPlugin<BetaDivScatterplotP
   @Override
   protected void writeResults(OutputStream out, Map<String, InputStream> dataStreams) throws IOException {
     BetaDivScatterplotSpec spec = getPluginSpec();
-    Map<String, VariableSpec> varMap = new HashMap<String, VariableSpec>();
+    Map<String, VariableSpec> varMap = new HashMap<>();
     // varMap.put("xAxisVariable", spec.getXAxisVariable()); // Will come from compute service
     // varMap.put("yAxisVariable", spec.getYAxisVariable());  // Will come from compute service
     varMap.put("overlayVariable", spec.getOverlayVariable());
@@ -121,12 +121,9 @@ public class BetaDivScatterplotPlugin extends AbstractPlugin<BetaDivScatterplotP
           spec.getOverlayVariable()));
           // getVariableSpecFromList(spec.getFacetVariable(), 0),
           // getVariableSpecFromList(spec.getFacetVariable(), 1)));
-      connection.voidEval(getVoidEvalVarMetadataMap(varMap));
-      String outFile = connection.eval("plot.data::scattergl(data, map, '" + valueSpec + "', " + showMissingness + ")").asString();
-      try (RFileInputStream response = connection.openFile(outFile)) {
-        IoUtil.transferStream(out, response);
-      }
-      out.flush();
+      connection.voidEval(getVoidEvalVarMetadataMap(DEFAULT_SINGLE_STREAM_NAME, varMap));
+      String command = "plot.data::scattergl(data, map, '" + valueSpec + "', " + showMissingness + ")";
+      RServeClient.streamResult(connection, command, out);
     }); 
   }
 }
